gcc/testsuite/rust/rustc/ui/iterators/bound.rs
struct S<I: Iterator>(I);
struct T(S<u8>);
// { dg-error ".E0277." "" { target *-*-* } .-1 }
fn main() {}

